# canivete_suico

./: bhaskara.py  bissexto.py  fatorial.py  fibonacci.py  install.py  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py  bhaskara.py  bissexto.py  check_number.py  check_time.py  clear.py  fatorial.py  fibonacci.py
src/api/: cotacao_moedas.py  metar.py
src/cryptographic/: cifra_de_cesar.py
src/polynomial/: bhaskara.py  polynomial_evaluate.py
tests/: test_caesar_cipher.py  test_check_number.py  test_check_time.py  test_cotacao_moedas.py  test_funcoes.py  test_metar.py  test_polynomial_evaluate.py  test_static_analisys_softwares.py
