[build-system]
requires = ["pip>=57.4.0"]
build-backend = "setuptools.build_meta"


[project]
name = "canivete_suico"
version = "0.0.0.0"
authors = [
  { name="Cássio Maciel Lemos", email="cassio.lemos@petrobras.com.br" },
]
description = 'Uma biblioteca Python com funções diversas, bem implementadasalinhadas com PEP 8 e pylint, proporcionando soluções eficientes e versáteis.'

readme = "README.md"
requires-python = ">=3.8"
keywords = []
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

[project.urls]
Homepage = "https://github.com/CassioMaciel/canivete_suico"
Issues = "https://github.com/CassioMaciel/canivete_suico/issues"
